...
                android:textSize="20dp"
                android:textColor="@color/blueClick" />

            <include layout="@layout/divider"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/listing_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/description_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/description_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/listing_description"
                    android:inputType="textMultiLine"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
...
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/price_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:hint="@string/listing_price" />
            </android.support.design.widget.TextInputLayout>
...
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/refundable_rButton"
                    android:text="@string/refundable_policy"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nonrefundable_rButton"
                    android:text="@string/nonrefundable_policy"/>

            </RadioGroup>

            <include layout="@layout/divider"/>

            <Button
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/upload_listing_button"
                android:text="@string/submit"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/colorAccent"
                android:textSize="25dp"/>

        </LinearLayout>
...
