<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/base_toolbar"
        android:id="@+id/filter_toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blueClick"
        android:text="@string/filters"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:textSize="30dp"/>

    <include layout="@layout/divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small">

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/covered_button_control"
            android:text="@string/covered_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small">

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/handicap_button_control"
            android:text="@string/handicap_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small">

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/compact_button_control"
            android:text="@string/compact_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="20dp"/>
    </LinearLayout>

    <include layout="@layout/divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small">

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/booking_count_button_control"
            android:text="@string/booking_count_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="20dp"/>
    </LinearLayout>

</LinearLayout>