<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_listing_layout">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/post_listing_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_listing"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorAccent"/>

    <include layout="@layout/divider"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listing"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/blueClick"
        />

    <ListView
        android:layout_marginTop="10dp"
        android:id="@+id/listing_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
</LinearLayout>